# cad-research

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt
src/console/: CMakeLists.txt  main.cpp
src/corecad/: CMakeLists.txt  corecad.cpp
src/corecad/calculator/: CMakeLists.txt  constraints_calculator.cpp  constraints_calculator.h  parameter_calculator.cpp  parameter_calculator.h
src/corecad/model/: CMakeLists.txt  collection.h  line2d.h  model_base.h  parameter_offset.h  property.h  registry.h  registry_index.h  registry_pool.h  trackable_registry.h  variant_model_base.h  vector2d.cpp  vector2d.h
src/corecad/model/constraint/: aligned.h  constraint.h  fixed.h  offset.h  views_take_constraints.h
src/corecad/model/history/: history.h  model_history.h
src/corecad/util/: CMakeLists.txt  member_hasher.h  multi_hash.h  one_of.h  overloaded.h  tagged_value.h  traits.h  type_list.h  views_take_variants.h
src/domain/: CMakeLists.txt
src/domain/plan/: CMakeLists.txt
src/domain/plan/calculator/: CMakeLists.txt  constraints_builder.cpp  constraints_builder.h  wall_calculator.cpp  wall_calculator.h
src/domain/plan/generator/: CMakeLists.txt  default_floor_generator.cpp  default_floor_generator.h
src/domain/plan/model/: CMakeLists.txt  floor.cpp  floor.h  wall.cpp  wall.h
src/domain/plan/model/parameter/: CMakeLists.txt  distance.cpp  distance.h  parameter.h  point_locator.cpp  point_locator.h  wall_border_point_locator.cpp  wall_border_point_locator.h
src/domain/plan/model/shape/: CMakeLists.txt  floor.cpp  floor.h  wall.cpp  wall.h
src/domain/plan/resolver/: CMakeLists.txt  point_resolver.cpp  point_resolver.h
src/gui/: CMakeLists.txt  main.cpp
src/gui/doc/: CMakeLists.txt  document.h  wall_snaps.cpp  wall_snaps.h
src/gui/editor/: CMakeLists.txt  calc_tools.h  floor_editor.cpp  floor_editor.h  mouse.cpp  mouse.h
src/gui/editor/calc_pipeline/: CMakeLists.txt  calc_tools.cpp  calc_tools.h
src/gui/editor/handler/: CMakeLists.txt  i_move_wall_handler.h  wall_intersection_handler.cpp  wall_intersection_handler.h  wall_join_handler.cpp  wall_join_handler.h  wall_t_join_handler.cpp  wall_t_join_handler.h
src/gui/editor/operation/: CMakeLists.txt  i_operation.h  operation_add_wall.cpp  operation_add_wall.h  operation_idle.cpp  operation_idle.h  operation_move_wall_handle.cpp  operation_move_wall_handle.h
src/gui/editor/snap/: CMakeLists.txt  i_snap_builder.h  snap_processor.cpp  snap_processor.h  vh_snap_builder.cpp  vh_snap_builder.h
src/gui/main_window/: CMakeLists.txt  main_menu.cpp  main_menu.h  main_window.cpp  main_window.h  workspace.cpp  workspace.h
src/gui/view/: CMakeLists.txt  abstract_point.h  constraints_view.cpp  constraints_view.h  coord_translator.cpp  coord_translator.h  floor_view.cpp  floor_view.h  parameters_view.cpp  parameters_view.h  walls_view.cpp  walls_view.h
src/tests/: CMakeLists.txt
src/tests/common_test_util/: CMakeLists.txt
src/tests/common_test_util/assertions/: CMakeLists.txt  vector2d_assertion.cpp  vector2d_assertion.h
src/tests/corecad_tests/: CMakeLists.txt
src/tests/corecad_tests/model_tests/: CMakeLists.txt
src/tests/corecad_tests/model_tests/history_tests/: history_base_fixture.cpp  history_base_fixture.h  when_cancel_transaction.cpp  when_redo_single_transaction.cpp  when_undo_redo_multiple_transactions.cpp  when_undo_single_transaction.cpp
src/tests/domain_tests/: CMakeLists.txt
src/tests/domain_tests/plan_tests/: CMakeLists.txt
src/tests/domain_tests/plan_tests/calculator_tests/: CMakeLists.txt
src/tests/domain_tests/plan_tests/calculator_tests/wall_calculator_tests/: wall_calculator_base_fixture.cpp  wall_calculator_base_fixture.h  when_calculating_wall_borders_for_added_wall.cpp  when_calculating_wall_borders_for_multiple_joined_walls.cpp  when_calculating_wall_borders_for_single_wall.cpp  when_calculating_wall_borders_for_two_walls.cpp
