add_subdirectory(parameter)

file(GLOB_RECURSE PLAN_MODEL_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
    ${PLAN_MODEL_PARAMETER_SOURCES}
)

set(PLAN_MODEL_SOURCES ${PLAN_MODEL_SOURCES} PARENT_SCOPE)

set(PLAN_MODEL_INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${PLAN_MODEL_PARAMETER_INCLUDES}
    PARENT_SCOPE
)

